# AdvectionDiffusion3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Discretizers/: AdiSpaceDiscretizer.cpp  AdiSpaceDiscretizer.h  AdiTimeDiscretizer.cpp  AdiTimeDiscretizer.h  CMakeLists.txt  CenteredDifferenceSpaceDiscretizer.cpp  CenteredDifferenceSpaceDiscretizer.h  CrankNicolsonTimeDiscretizer.cpp  CrankNicolsonTimeDiscretizer.h  ExplicitTimeDiscretizer.cpp  ExplicitTimeDiscretizer.h  ISpaceDiscretizer.h  ITimeDiscretizer.h  ImplicitTimeDiscretizer.cpp  ImplicitTimeDiscretizer.h
LinearAlgebra/: TridiagonalMatrix.h  TridiagonalSolver.h  Vector.h
Pde/: CMakeLists.txt  Configuration.h  Debug.cpp  Index.h  InputData.h  Problem.cpp  Problem.h  Profiler.cpp  ProfilerResults.txt  ProfilerResultsAfterAdiRefactorWithSourceTerm_2.txt  ProfilerResultsAfterAdiRefactor_1.txt  ProfilerResultsAfterAdiRefactor_2.txt  SolverType.h  SparseSolver.h  Tolerance.h  debug.py
UnitTests/: AdvectionDiffusion.cpp  CMakeLists.txt  HeatEquation.cpp  TransportEquation.cpp  TridiagonalSolver.cpp
